<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<packaging>pom</packaging>
	<groupId>me.szumielxd</groupId>
	<artifactId>proxyyweb-parent</artifactId>
	<version>${revision}</version>
	<url>${website}</url>
	<name>${pluginName}</name>
	<properties>
		<java.version>17</java.version>
		<pluginName>ProxyyWeb</pluginName>
		<pluginId>proxyyweb</pluginId>
		<author>szumielxd</author>
		<website>https://github.com/szumielxd/ProxyyWeb/</website>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<package>me.szumielxd.proxyyweb</package>
		<velocityMainClass>${package}.velocity.ProxyServerListVelocity</velocityMainClass>
		<bungeeMainClass>${package}.bungee.ProxyServerListBungee</bungeeMainClass>
		<revision>2.0.0-SNAPSHOT</revision>
	</properties>
	<!-- Repositories -->
	<repositories>
		<repository>
			<id>mcs-snapshots</id>
			<url>https://repo.hypixel.pl/repository/maven-snapshots/</url>
		</repository>
		<repository>
			<id>spigot-repo</id>
			<url>https://hub.spigotmc.org/nexus/content/groups/public</url>
		</repository>
		<repository>
			<id>papermc</id>
			<url>https://papermc.io/repo/repository/maven-public/</url>
		</repository>
		<repository>
			<id>sonatype-oss-snapshots</id>
			<url>https://oss.sonatype.org/content/repositories/snapshots/</url>
		</repository>
		<repository>
			<id>jitpack.io</id>
			<url>https://jitpack.io</url>
		</repository>
		<repository>
			<id>viaversion-repo</id>
			<url>https://repo.viaversion.com</url>
		</repository>
		<repository>
			<id>exceptionflug</id>
			<url>https://mvn.exceptionflug.de/repository/exceptionflug-public/</url>
		</repository>
		<repository>
			<id>opencollab-snapshot-repo</id>
			<url>https://repo.opencollab.dev/maven-snapshots/</url>
			<releases>
				<enabled>false</enabled>
			</releases>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
		</repository>
	</repositories>
	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>${project.groupId}</groupId>
				<artifactId>proxyyweb-common</artifactId>
				<version>${revision}</version>
				<scope>provided</scope>
			</dependency>
			<dependency>
				<groupId>${project.groupId}</groupId>
				<artifactId>proxyyweb-bungee</artifactId>
				<version>${revision}</version>
			</dependency>
			<dependency>
				<groupId>${project.groupId}</groupId>
				<artifactId>proxyyweb-velocity</artifactId>
				<version>${revision}</version>
			</dependency>
			
			<dependency>
				<groupId>me.szumielxd</groupId>
				<artifactId>legacy-miniadventure</artifactId>
				<version>1.0.0-SNAPSHOT</version>
				<scope>provided</scope>
			</dependency>
			<dependency>
				<groupId>me.szumielxd</groupId>
				<artifactId>conditionsz-api</artifactId>
				<version>1.0.0-SNAPSHOT</version>
				<scope>provided</scope>
			</dependency>
			
			<!-- Adventure platform -->
			<dependency>
				<groupId>net.kyori</groupId>
				<artifactId>adventure-platform-bungeecord</artifactId>
				<version>4.3.2</version>
				<type>jar</type>
				<scope>provided</scope>
				<optional>true</optional>
				<exclusions>
					<exclusion>
						<groupId>org.jetbrains</groupId>
						<artifactId>annotations</artifactId>
					</exclusion>
					<exclusion>
						<groupId>org.checkerframework</groupId>
						<artifactId>checker-qual</artifactId>
					</exclusion>
					<exclusion>
						<groupId>net.kyori</groupId>
						<artifactId>examination-api</artifactId>
					</exclusion>
					<exclusion>
						<groupId>net.kyori</groupId>
						<artifactId>adventure-api</artifactId>
					</exclusion>
					<exclusion>
						<groupId>net.kyori</groupId>
						<artifactId>adventure-nbt</artifactId>
					</exclusion>
					<exclusion>
						<groupId>net.kyori</groupId>
						<artifactId>adventure-text-serializer-gson</artifactId>
					</exclusion>
				</exclusions>
			</dependency>
			<dependency>
				<groupId>net.kyori</groupId>
				<artifactId>adventure-text-serializer-gson</artifactId>
				<version>4.13.1</version>
				<scope>provided</scope>
				<exclusions>
					<exclusion>
						<groupId>com.google.code.gson</groupId>
						<artifactId>gson</artifactId>
					</exclusion>
				</exclusions>
			</dependency>
			
			<dependency>
				<groupId>net.kyori</groupId>
				<artifactId>adventure-text-minimessage</artifactId>
				<version>4.13.1</version>
				<scope>provided</scope>
				<exclusions>
					<exclusion>
						<groupId>org.jetbrains</groupId>
						<artifactId>annotations</artifactId>
					</exclusion>
					<exclusion>
						<groupId>org.checkerframework</groupId>
						<artifactId>checker-qual</artifactId>
					</exclusion>
					<exclusion>
						<groupId>net.kyori</groupId>
						<artifactId>adventure-api</artifactId>
					</exclusion>
					<exclusion>
						<groupId>net.kyori</groupId>
						<artifactId>adventure-key</artifactId>
					</exclusion>
				</exclusions>
			</dependency>
			<dependency>
				<groupId>net.kyori</groupId>
				<artifactId>adventure-text-serializer-bungeecord</artifactId>
				<version>4.3.2</version>
				<scope>compile</scope>
				<exclusions>
					<exclusion>
						<groupId>org.jetbrains</groupId>
						<artifactId>annotations</artifactId>
					</exclusion>
					<exclusion>
						<groupId>org.checkerframework</groupId>
						<artifactId>checker-qual</artifactId>
					</exclusion>
				</exclusions>
			</dependency>
			<dependency>
				<groupId>net.kyori</groupId>
				<artifactId>adventure-text-serializer-legacy</artifactId>
				<version>4.13.1</version>
				<scope>compile</scope>
				<exclusions>
					<exclusion>
						<groupId>org.jetbrains</groupId>
						<artifactId>annotations</artifactId>
					</exclusion>
					<exclusion>
						<groupId>org.checkerframework</groupId>
						<artifactId>checker-qual</artifactId>
					</exclusion>
				</exclusions>
			</dependency>
			
			<dependency>
				<groupId>me.carleslc.Simple-YAML</groupId>
				<artifactId>Simple-Yaml</artifactId>
				<version>1.8</version>
				<scope>provided</scope>
			</dependency>
			
			<!-- BungeeCord -->
			<dependency>
				<groupId>net.md-5</groupId>
				<artifactId>bungeecord-api</artifactId>
				<version>1.20-R0.1-SNAPSHOT</version>
				<scope>provided</scope>
			</dependency>
			
			<!-- Velocity -->
			<dependency>
				<groupId>com.velocitypowered</groupId>
				<artifactId>velocity-api</artifactId>
				<version>3.3.0-SNAPSHOT</version>
				<scope>provided</scope>
			</dependency>
			<dependency>
				<groupId>dev.simplix</groupId>
				<artifactId>protocolize-api</artifactId>
				<version>2.3.3</version>
				<scope>provided</scope>
			</dependency>
			<dependency>
				<groupId>org.eclipse.jetty</groupId>
				<artifactId>jetty-server</artifactId>
				<version>11.0.9</version>
				<scope>provided</scope>
			</dependency>
			<dependency>
				<groupId>com.google.code.gson</groupId>
				<artifactId>gson</artifactId>
				<version>2.7</version>
				<scope>provided</scope>
			</dependency>
			<dependency>
				<groupId>com.google.guava</groupId>
				<artifactId>guava</artifactId>
				<version>33.0.0-jre</version>
				<scope>provided</scope>
			</dependency>
			<dependency>
				<groupId>io.netty</groupId>
				<artifactId>netty-transport-native-unix-common</artifactId>
				<version>4.1.77.Final</version>
				<scope>provided</scope>
			</dependency>
			<!-- BungeeCord -->
			<dependency>
				<groupId>net.md-5</groupId>
				<artifactId>bungeecord-api</artifactId>
				<version>1.20-R0.1-SNAPSHOT</version>
				<scope>provided</scope>
			</dependency>
			<dependency>
				<groupId>com.zaxxer</groupId>
				<artifactId>HikariCP</artifactId>
				<version>5.0.1</version>
				<type>jar</type>
				<scope>compile</scope>
			</dependency>
			<!-- Jetty -->
			<dependency>
				<groupId>org.eclipse.jetty</groupId>
				<artifactId>jetty-server</artifactId>
				<version>11.0.15</version>
				<type>jar</type>
				<scope>compile</scope>
			</dependency>
			<dependency>
				<groupId>org.eclipse.jetty</groupId>
				<artifactId>jetty-servlet</artifactId>
				<version>11.0.15</version>
				<type>jar</type>
				<scope>compile</scope>
			</dependency>
			<dependency>
				<groupId>javax.activation</groupId>
				<artifactId>activation</artifactId>
				<version>1.1.1</version>
				<type>jar</type>
				<scope>compile</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<!-- Dependencies -->
	<dependencies>
		<dependency>
			<groupId>org.jetbrains</groupId>
			<artifactId>annotations</artifactId>
			<version>24.0.1</version>
			<scope>provided</scope>
		</dependency>
		<!-- Lombok -->
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<version>1.18.28</version>
			<scope>provided</scope>
		</dependency>
	</dependencies>

	<!-- Build -->
	<build>
		<defaultGoal>clean package</defaultGoal>

		<pluginManagement>
			<plugins>
				<!-- Compile plugin -->
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<configuration>
						<source>17</source>
						<target>17</target>
						<release>17</release>
						<showDeprecation>true</showDeprecation>
					</configuration>
				</plugin>
				
				<!-- Jar plugin -->
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-jar-plugin</artifactId>
				</plugin>
				
				<!-- Shade plugin -->
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-shade-plugin</artifactId>
					<executions>
						<execution>
							<phase>package</phase>
							<goals>
								<goal>shade</goal>
							</goals>
						</execution>
					</executions>
					<configuration>
						<filters>
							<filter>
								<artifact>*:*</artifact>
								<excludes>
									<exclude>META-INF/maven/**</exclude>
								</excludes>
							</filter>
						</filters>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>
	<modules>
		<module>proxyyweb-common</module>
		<module>proxyyweb-bungee</module>
		<module>proxyyweb-velocity</module>
	</modules>
</project>